@@ -225,3 +225,5 @@ Fixes:
     * Evas font: If OS/2 table is available and the font is demi-bold, don't do runtime emboldment.
     * Evas font: fix font source have wrong current size.
     * Evas: Fix over redrawing of Evas_Map when applied on smart object.
+    * Evas font: Fix a bug with cluster size calculation with texts ending
+	with ligatures.
